force-app/main/default/objects/Vehicle_Master2__c/fields/Vehicle_Purchase_Status__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Purchase_Status__c</fullName>
    <label>Vehicle Purchase Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
                <default>true</default>
                <label>Confirmed</label>
            </value>
            <value>
                <fullName>In Shipment</fullName>
            </value>
            <value>
                <fullName>Arrived</fullName>
            </value>
            <value>
                <fullName>SCL_Cancel</fullName>
                <label>SCL (Cancel)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>