force-app/main/default/objects/Vehicle_Master2__c/fields/Vehicle_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Shipment</label>
    <referenceTo>Vehicle_Shipment__c</referenceTo>
    <relationshipLabel>Stock Vehicle Masters</relationshipLabel>
    <relationshipName>Stock_Vehicle_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>