force-app/main/default/objects/Vehicle_Master2__c/fields/Vehicle_Status__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Status__c</fullName>
    <label>Vehicle Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FREE</fullName>
                <default>true</default>
                <label>FREE</label>
            </value>
            <value>
                <fullName>ORD</fullName>
            </value>
            <value>
                <fullName>SCL</fullName>
            </value>
            <value>
                <fullName>RESRV</fullName>
            </value>
            <value>
                <fullName>ALLOC</fullName>
            </value>
            <value>
                <fullName>SOLD</fullName>
            </value>
            <value>
                <fullName>CONF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>