force-app/main/default/objects/Vehicle_Master2__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>