force-app/main/default/objects/Vehicle_Master2__c/fields/Vehicle_Type_For_Sale__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type_For_Sale__c</fullName>
    <description>To show in separate stock (Existing stock, incoming stock, promotional stock, stock to indent)</description>
    <formula>IF(
    AND(
         ISPICKVAL(Vehicle_Status__c, &quot;FREE&quot;), 
         OR(ISPICKVAL(Vehicle_Purchase_Status__c, &quot;Confirmed&quot;), ISPICKVAL(Vehicle_Purchase_Status__c, &quot;In Shipment&quot;), ISPICKVAL(Vehicle_Purchase_Status__c, &quot;Arrived&quot;)),
         !ISBLANK(TEXT(Stock_Promotion_Status__c))
    ), &quot;Promotional Stock&quot;,
    IF(
        AND(
             ISPICKVAL(Vehicle_Status__c, &quot;FREE&quot;), 
             ISPICKVAL(Vehicle_Purchase_Status__c, &quot;Arrived&quot;),
             ISBLANK(TEXT(Stock_Promotion_Status__c))
        ), &quot;Existing Stock&quot;,
        IF(
            AND(
                 ISPICKVAL(Vehicle_Status__c, &quot;FREE&quot;), 
                 OR(ISPICKVAL(Vehicle_Purchase_Status__c, &quot;Confirmed&quot;), ISPICKVAL(Vehicle_Purchase_Status__c, &quot;In Shipment&quot;)),
                 ISBLANK(TEXT(Stock_Promotion_Status__c))
            ), &quot;Incoming Stock&quot;, &quot;&quot;
        )
    )
)</formula>
    <label>Vehicle Type For Sale</label>
    <type>Text</type>
</CustomField>