force-app/main/default/objects/Vehicle_Master2__c/validationRules/Lock_Cannibalised_Vehicle_Condition.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Cannibalised_Vehicle_Condition</fullName>
    <active>true</active>
    <description>Cannibalised vehicle is not allow to change vehicle condition</description>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Vehicle_Condition__c), &quot;Cannibalization&quot;)
&amp;&amp;
ISCHANGED(Vehicle_Condition__c)</errorConditionFormula>
    <errorDisplayField>Vehicle_Condition__c</errorDisplayField>
    <errorMessage>Cannibalised vehicle is not allow to change vehicle condition</errorMessage>
</ValidationRule>