force-app/main/default/objects/Vehicle_Master2__c/validationRules/Not_Allow_Display_Test_Car_Change_To_New.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Allow_Display_Test_Car_Change_To_New</fullName>
    <active>true</active>
    <description>Not allow Test Drive Car and Display Car change to New</description>
    <errorConditionFormula>(
					ISPICKVAL(PRIORVALUE(Vehicle_Condition__c), &quot;Test Drive Car&quot;)
	    ||
	    ISPICKVAL(PRIORVALUE(Vehicle_Condition__c), &quot;Display Car&quot;)
)
&amp;&amp;
ISPICKVAL(Vehicle_Condition__c, &quot;New&quot;)</errorConditionFormula>
    <errorDisplayField>Vehicle_Condition__c</errorDisplayField>
    <errorMessage>Test Drive Car and Display Car is not allow chaning to New</errorMessage>
</ValidationRule>