force-app/main/default/objects/Vehicle_Master2__c/validationRules/Required_fields_for_KIA_promotion.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_fields_for_KIA_promotion</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
				ISPICKVAL(Promotion_Type__c, &apos;KIA Warehouse&apos;),
				IF(
								ISBLANK(TEXT(Stock_Promotion_Vehicle_Type__c)) || ISBLANK(TEXT(Stock_Promotion_Vehicle_Sub_Type__c)) || ISBLANK(Actual_Vehicle_Price__c) || ISBLANK(Discounted_Price__c) || ISBLANK(Mileage__c),
				    true,
				    false
    ), 
				false
)
&amp;&amp;
NOT($Setup.Bypass_Automation_Settings__c.Bypass_Validation_Rules__c)</errorConditionFormula>
    <errorMessage>SP Vehicle Type, SP Vehicle Sub Type, Actual Vehicle Price, Discounted Price, and Mileage are required for KIA Warehouse promotion</errorMessage>
</ValidationRule>