force-app/main/default/objects/Vehicle_Master2__c/listViews/MIT_Stock_Reserve_by_Management_View.listView-meta.xml
<ListView>
    <fullName>MIT_Stock_Reserve_by_Management_View</fullName>
    <columns>NAME</columns>
    <columns>Original_Commcase__c</columns>
    <columns>Model_Code__c</columns>
    <columns>Color_Code__c</columns>
    <columns>Trim_Code__c</columns>
    <columns>Count_Promotional_Stock__c</columns>
    <columns>Model_Year_Code__c</columns>
    <columns>Vehicle_Status__c</columns>
    <columns>Reservation_No__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch_Code__c</field>
        <operation>equals</operation>
        <value>CCA</value>
    </filters>
    <filters>
        <field>Vehicle_Status__c</field>
        <operation>equals</operation>
        <value>FREE</value>
    </filters>
    <filters>
        <field>Model_Code__c</field>
        <operation>equals</operation>
        <value>A13AE31</value>
    </filters>
    <filters>
        <field>Color_Code__c</field>
        <operation>equals</operation>
        <value>P019</value>
    </filters>
    <label>MIT Stock Reserve by Management View</label>
</ListView>