force-app/main/default/objects/Vehicle_Master2__c/listViews/Unmatched_Stocks.listView-meta.xml
<ListView>
    <fullName>Unmatched_Stocks</fullName>
    <columns>NAME</columns>
    <columns>Shipment_Line_Item__c</columns>
    <columns>Vehicle_Purchase_Order__c</columns>
    <columns>Production_Month__c</columns>
    <columns>Model_Code__c</columns>
    <columns>Color_Code__c</columns>
    <columns>Color_Description__c</columns>
    <columns>Trim_Code__c</columns>
    <columns>Trim_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vehicle_Purchase_Status__c</field>
        <operation>equals</operation>
        <value>Confirmed,In Shipment,Arrived</value>
    </filters>
    <filters>
        <field>Shipment_Line_Item__c</field>
        <operation>equals</operation>
    </filters>
    <label>Unmatched Stocks</label>
</ListView>